@@ -1357,11 +1357,18 @@ def markup_stream_pygments(request, cfg, blame_data, fp, filename, mime_type):
                                 get_lexer_by_name, \
                                 get_lexer_for_mimetype, \
                                 get_lexer_for_filename
+    encoding = 'guess'
+    if cfg.options.detect_encoding:
+      try:
+        import chardet
+        encoding = 'chardet'
+      except (SyntaxError, ImportError):
+        pass
     try:
-      lexer = get_lexer_for_mimetype(mime_type)
+      lexer = get_lexer_for_mimetype(mime_type, encoding=encoding)
     except ClassNotFound:
       try:
-        lexer = get_lexer_for_filename(filename)
+        lexer = get_lexer_for_filename(filename, encoding=encoding)
       except ClassNotFound:
         use_pygments = 0
   except ImportError:
